# playlistAgent

./: .env.example  Plan.md  README.md  authenticate.py  pyproject.toml  server.py  smoke_test.py
llm/: playlist_editor.py  provider.py  song_generator.py  taste_profile.py
prompts/: generate_playlist.txt  modify_playlist.txt
spotify/: __init__.py  auth.py  client.py  models.py
tests/: test_llm_generation.py  test_spotify_client.py  test_tools_playlist.py
tools/: analysis.py  playlist.py  recommendation.py  search.py
